<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1D86B3"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/Display"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:id="@+id/viewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:gravity="right|center_vertical"
            android:text="@string/viewResult"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BotoneraSuperior"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/idBotonON"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#F7C16D"
            android:onClick="botonPulsado"
            android:paddingRight="5dp"
            android:text="@string/buttonON"
            android:textSize="24sp" />

        <Button
            android:id="@+id/idBotonCE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#F7C16D"
            android:onClick="botonPulsado"
            android:text="@string/buttonDel"
            android:textSize="24sp" />

        <Button
            android:id="@+id/idBotonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#F7C16D"
            android:onClick="botonPulsado"
            android:text="@string/buttonDiv"
            android:textSize="24sp" />

        <Button
            android:id="@+id/idBotonPor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F7C16D"
            android:onClick="botonPulsado"
            android:text="@string/buttonPor"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Botonera2"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/idBoton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#90C6DA"
            android:onClick="botonPulsado"
            android:text="@string/button7" />

        <Button
            android:id="@+id/idBoton8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#90C6DA"
            android:onClick="botonPulsado"
            android:text="@string/button8" />

        <Button
            android:id="@+id/idBoton9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#90C6DA"
            android:onClick="botonPulsado"
            android:text="@string/button9" />

        <Button
            android:id="@+id/idBotonPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F7C16D"
            android:onClick="botonPulsado"
            android:text="@string/buttonPlus"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Botonera1"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/idBoton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#90C6DA"
            android:onClick="botonPulsado"
            android:text="@string/button4" />

        <Button
            android:id="@+id/idBoton5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#90C6DA"
            android:onClick="botonPulsado"
            android:text="@string/button5" />

        <Button
            android:id="@+id/idBoton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="#90C6DA"
            android:onClick="botonPulsado"
            android:text="@string/button6" />

        <Button
            android:id="@+id/idBotonMinus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F7C16D"
            android:onClick="botonPulsado"
            android:text="@string/buttonMinus"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BotoneraInferior"
        android:layout_width="match_parent"
        android:layout_height="168sp"
        android:layout_weight="0"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/id123"
                android:layout_width="match_parent"
                android:layout_height="84sp"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/idBoton1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:background="#90C6DA"
                    android:onClick="botonPulsado"
                    android:text="@string/button1" />

                <Button
                    android:id="@+id/idBoton2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:background="#90C6DA"
                    android:onClick="botonPulsado"
                    android:text="@string/button2" />

                <Button
                    android:id="@+id/idBoton3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#90C6DA"
                    android:onClick="botonPulsado"
                    android:text="@string/button3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idcero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/idBotonPorcentual"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:background="#90C6DA"
                    android:onClick="botonPulsado"
                    android:text="@string/buttonPorcentual"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/idBoton0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:background="#90C6DA"
                    android:onClick="botonPulsado"
                    android:text="@string/button0" />

                <Button
                    android:id="@+id/idBotonPunto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#90C6DA"
                    android:onClick="botonPulsado"
                    android:text="@string/buttonPoint" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5sp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/idBotonIgual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F7C16D"
                android:onClick="botonPulsado"
                android:text="@string/buttonIgual"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>